refactor: changing property name

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,7 +40,7 @@
     <form method="post">
       <input name="username" placeholder="charlie.brown" />
       what do you want for christmas?
-      <textarea name="wish" rows="10" cols="45" maxlength="100" placeholder="Gifts!"></textarea>
+      <textarea name="content" rows="10" cols="45" maxlength="100" placeholder="Gifts!"></textarea>
       <br/>
       <p id="error"></p>
       <button type="submit" id="submit-letter">Send</button>
